@@ -15,7 +15,7 @@ GNU GPL v2 or greater, or Larry Wall's Artistic license - your choice.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
-Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
 Copyright for this work is to expire January 1, 2010, after which it
 shall be public domain.
